# KT2640_Kairotic

./: README.md  TESTING_SUMMARY.md  pyproject.toml  start.bat  test_e2e.py
.kiro/specs/hawkins-truth-engine-expansion/: tasks.md
hawkins_truth_engine/: app.py  config.py  explain.py  ingest.py  reasoning.py  schemas.py  utils.py  validators.py
hawkins_truth_engine/analyzers/: claims.py  linguistic.py  source_intel.py  statistical.py
hawkins_truth_engine/calibration/: README.md  __init__.py  example.py  model.py  test_integration.py  test_model.py
hawkins_truth_engine/graph/: __init__.py  claim_graph.py  evidence_graph.py  query_interface.py  test_claim_graph_enhancements.py  test_enhanced_integration.py  test_evidence_graph.py  test_query_interface.py
hawkins_truth_engine/static/: index.html  presentation.html
hawkins_truth_engine/tests/: __init__.py  test_api_connections.py  test_edge_cases.py
hawkins_truth_engine/utils/: __init__.py  source_quality.py
tests/: test_e2e.py  test_edge_cases.py
